Fix homepage h1 on mobile.

--- a/app/components/HomeHero/HomeHero.module.scss
+++ b/app/components/HomeHero/HomeHero.module.scss
@@ -21,5 +21,11 @@
         bottom: 0;
         color: white;
         @include large-container;
+
+        @media  screen and (max-width: 640px) {
+            font-size: 3.5rem !important;
+            
+        }
+
     }
 }
